borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__check_serialize_with_skip_conflict.snap
---
source: borsh-derive/src/struct_ser.rs
expression: err
---
Error(
    "`borsh_skip` cannot be used at the same time as `serialize_with` or `deserialize_with`",
)
