borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__generic_associated_type.snap
---
source: borsh-derive/src/struct_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T, V> borsh::ser::BorshSerialize for Parametrized<T, V>
where
    T: TraitName,
    T::Associated: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.field, writer)?;
        borsh::BorshSerialize::serialize(&self.another, writer)?;
        Ok(())
    }
}

