borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__generic_serialize_bound.snap
---
source: borsh-derive/src/struct_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T: Debug, U> borsh::ser::BorshSerialize for C<T, U>
where
    T: borsh::ser::BorshSerialize + PartialOrd,
    U: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.a, writer)?;
        borsh::BorshSerialize::serialize(&self.b, writer)?;
        Ok(())
    }
}

