borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__generic_tuple_struct_borsh_skip2.snap
---
source: borsh-derive/src/struct_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::ser::BorshSerialize for G<K, V, U>
where
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.0, writer)?;
        Ok(())
    }
}

