borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__override_generic_associated_type_wrong_derive.snap
---
source: borsh-derive/src/struct_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T, V> borsh::ser::BorshSerialize for Parametrized<T, V>
where
    T: TraitName,
    V: borsh::ser::BorshSerialize,
    <T as TraitName>::Associated: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.field, writer)?;
        borsh::BorshSerialize::serialize(&self.another, writer)?;
        Ok(())
    }
}

