borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__recursive_struct.snap
---
source: borsh-derive/src/struct_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::ser::BorshSerialize for CRecC {
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.a, writer)?;
        borsh::BorshSerialize::serialize(&self.b, writer)?;
        Ok(())
    }
}

