borsh-derive/src/snapshots/borsh_derive__struct_ser__tests__simple_generic_tuple_struct.snap
---
source: borsh-derive/src/struct_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T> borsh::ser::BorshSerialize for TupleA<T>
where
    T: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.0, writer)?;
        borsh::BorshSerialize::serialize(&self.1, writer)?;
        Ok(())
    }
}

